plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.graalvm.buildtools.native' version '0.10.4'
}

group = 'liv.codveda'
version = '0.0.1-SNAPSHOT'
description = 'blogging website'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

ext {
	set('springAiVersion', "2.0.0-M2")
}

repositories {
	mavenCentral()
}

dependencies {
	// Core
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	runtimeOnly 'org.postgresql:postgresql'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// Cache
	implementation("com.github.ben-manes.caffeine:caffeine:3.2.3")
	
	// Spring AI
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
	
	// OpenAPI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Tests
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}